prql-compiler/tests/integration/snapshots/integration__sql_MsSql@group_sort.prql.snap
---
source: prql-compiler/tests/integration/main.rs
expression: "from tracks\nderive d = album_id + 1\ngroup d (\n    aggregate {\n        n1 = (track_id | sum),\n    }\n)\nsort d\ntake 10\nselect { d1 = d, n1 }\n"
input_file: prql-compiler/tests/integration/queries/group_sort.prql
---
WITH table_0 AS (
  SELECT
    SUM(track_id) AS n1,
    album_id + 1 AS _expr_0
  FROM
    tracks
  GROUP BY
    album_id + 1
),
table_1 AS (
  SELECT
    TOP (10) _expr_0 AS d1,
    n1,
    _expr_0
  FROM
    table_0
  ORDER BY
    _expr_0
)
SELECT
  d1,
  n1
FROM
  table_1
ORDER BY
  _expr_0

