prql-compiler/tests/integration/snapshots/integration__sql_MsSql@switch.prql.snap
---
source: prql-compiler/tests/integration/main.rs
expression: "from tracks\nsort milliseconds\nselect display = case {\n    composer != null => composer,\n    genre_id < 17 => 'no composer',\n    true => f'unknown composer'\n}\ntake 10\n"
input_file: prql-compiler/tests/integration/queries/switch.prql
---
WITH table_0 AS (
  SELECT
    TOP (10) CASE
      WHEN composer IS NOT NULL THEN composer
      WHEN genre_id < 17 THEN 'no composer'
      ELSE 'unknown composer'
    END AS display,
    milliseconds
  FROM
    tracks
  ORDER BY
    milliseconds
)
SELECT
  display
FROM
  table_0
ORDER BY
  milliseconds

