prql-compiler/tests/integration/snapshots/integration__sql_Postgres@arithmetic.prql.snap
---
source: prql-compiler/tests/integration/main.rs
expression: "from [\n    { x_int =  13, x_float =  13.0, k_int =  5, k_float =  5.0 },\n    { x_int = -13, x_float = -13.0, k_int =  5, k_float =  5.0 },\n    { x_int =  13, x_float =  13.0, k_int = -5, k_float = -5.0 },\n    { x_int = -13, x_float = -13.0, k_int = -5, k_float = -5.0 },\n]\nselect {\n    x_int / k_int,\n    x_int / k_float,\n    x_float / k_int,\n    x_float / k_float,\n\n    q_ii = x_int // k_int,\n    q_if = x_int // k_float,\n    q_fi = x_float // k_int,\n    q_ff = x_float // k_float,\n\n    r_ii = x_int % k_int,\n    r_if = x_int % k_float,\n    r_fi = x_float % k_int,\n    r_ff = x_float % k_float,\n\n    (q_ii * k_int + r_ii | round 0),\n    (q_if * k_float + r_if | round 0),\n    (q_fi * k_int + r_fi | round 0),\n    (q_ff * k_float + r_ff | round 0),\n}\n"
input_file: prql-compiler/tests/integration/queries/arithmetic.prql
---
WITH table_0 AS (
  SELECT
    13 AS x_int,
    13.0 AS x_float,
    5 AS k_int,
    5.0 AS k_float
  UNION
  ALL
  SELECT
    -13 AS x_int,
    -13.0 AS x_float,
    5 AS k_int,
    5.0 AS k_float
  UNION
  ALL
  SELECT
    13 AS x_int,
    13.0 AS x_float,
    -5 AS k_int,
    -5.0 AS k_float
  UNION
  ALL
  SELECT
    -13 AS x_int,
    -13.0 AS x_float,
    -5 AS k_int,
    -5.0 AS k_float
)
SELECT
  (x_int * 1.0 / k_int),
  (x_int * 1.0 / k_float),
  (x_float * 1.0 / k_int),
  (x_float * 1.0 / k_float),
  TRUNC(x_int / k_int) AS q_ii,
  TRUNC(x_int / k_float) AS q_if,
  TRUNC(x_float / k_int) AS q_fi,
  TRUNC(x_float / k_float) AS q_ff,
  x_int % k_int AS r_ii,
  x_int % k_float AS r_if,
  x_float % k_int AS r_fi,
  x_float % k_float AS r_ff,
  ROUND(
    (TRUNC(x_int / k_int) * k_int + x_int % k_int) :: numeric,
    0
  ),
  ROUND(
    (
      TRUNC(x_int / k_float) * k_float + x_int % k_float
    ) :: numeric,
    0
  ),
  ROUND(
    (TRUNC(x_float / k_int) * k_int + x_float % k_int) :: numeric,
    0
  ),
  ROUND(
    (
      TRUNC(x_float / k_float) * k_float + x_float % k_float
    ) :: numeric,
    0
  )
FROM
  table_0

