prql-compiler/tests/integration/snapshots/integration__sql_Postgres@pipelines.prql.snap
---
source: prql-compiler/tests/integration/main.rs
expression: "# skip_mssql (https://github.com/PRQL/prql/issues/2448)\n# skip_mysql (regex not yet implemented)\n# skip_sqlite (regex not yet implemented)\n# booleans cannot be selected directly. instead CASE is needed (https://dba.stackexchange.com/a/2774)\nfrom tracks\n\nfilter (name ~= \"Love\")\nfilter ((milliseconds / 1000 / 60) | in 3..4)\nsort track_id\ntake 1..15\nselect {name, composer}\n"
input_file: prql-compiler/tests/integration/queries/pipelines.prql
---
WITH table_0 AS (
  SELECT
    name,
    composer,
    track_id
  FROM
    tracks
  WHERE
    name ~ 'Love'
    AND ((milliseconds * 1.0 / 1000) * 1.0 / 60) BETWEEN 3 AND 4
  ORDER BY
    track_id
  LIMIT
    15
)
SELECT
  name,
  composer
FROM
  table_0
ORDER BY
  track_id

