prql-compiler/tests/integration/snapshots/integration__sql_examples@distinct.prql.snap
---
source: prql-compiler/tests/integration/main.rs
expression: "prql_compiler::compile(&fs::read_to_string(path).unwrap(),\n        &Options::default()).unwrap()"
input_file: prql-compiler/tests/integration/queries/distinct.prql
---
WITH table_1 AS (
  SELECT
    DISTINCT album_id,
    genre_id
  FROM
    tracks
)
SELECT
  album_id,
  genre_id
FROM
  table_1 AS table_0
ORDER BY
  album_id,
  genre_id

-- Generated by PRQL compiler version:0.7.1 (https://prql-lang.org)

