prql-compiler/tests/integration/snapshots/integration__sql_examples@genre_counts.prql.snap
---
source: prql-compiler/tests/integration/main.rs
expression: "prql_compiler::compile(&fs::read_to_string(path).unwrap(),\n        &Options::default()).unwrap()"
input_file: prql-compiler/tests/integration/queries/genre_counts.prql
---
WITH genre_count AS (
  SELECT
    COUNT(*) AS a
  FROM
    genres
)
SELECT
  - a AS a
FROM
  genre_count
WHERE
  a > 0

-- Generated by PRQL compiler version:0.7.1 (https://prql-lang.org)

