prql-compiler/tests/integration/snapshots/integration__sql_examples@group_all.prql.snap
---
source: prql-compiler/tests/integration/main.rs
expression: "prql_compiler::compile(&fs::read_to_string(path).unwrap(),\n        &Options::default()).unwrap()"
input_file: prql-compiler/tests/integration/queries/group_all.prql
---
WITH table_1 AS (
  SELECT
    album_id,
    title
  FROM
    albums AS a
  LIMIT
    10
)
SELECT
  table_0.album_id,
  table_0.title,
  ROUND(SUM(tracks.unit_price), 2) AS price
FROM
  table_1 AS table_0
  JOIN tracks ON table_0.album_id = tracks.album_id
GROUP BY
  table_0.album_id,
  table_0.title
ORDER BY
  table_0.album_id

-- Generated by PRQL compiler version:0.7.1 (https://prql-lang.org)

