prql-compiler/tests/integration/snapshots/integration__sql_examples@loop.prql.snap
---
source: prql-compiler/tests/integration/main.rs
expression: "prql_compiler::compile(&fs::read_to_string(path).unwrap(),\n        &Options::default()).unwrap()"
input_file: prql-compiler/tests/integration/queries/loop.prql
---
WITH table_0 AS (
  SELECT
    1 AS n
),
table_4 AS (
  WITH RECURSIVE _loop AS (
    SELECT
      n - 2 AS _expr_0
    FROM
      table_0 AS table_1
    UNION
    ALL
    SELECT
      _expr_0 + 1
    FROM
      _loop AS table_2
    WHERE
      _expr_0 < 4
  )
  SELECT
    *
  FROM
    _loop
)
SELECT
  _expr_0 * 2 AS n
FROM
  table_4 AS table_3

-- Generated by PRQL compiler version:0.7.1 (https://prql-lang.org)

